--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/app.js",
+    "build": "test -d dist && rm -r dist && tsc -p ./ || tsc -p ./",
+    "start": "npm run build && node dist/app.js",
     "dev": "nodemon src/app.ts",
-    "build": "tsc -p ./",
-    "dbsetup": "node dist/create-database.js && npx sequelize-cli db:migrate",
+    "migrate": "npx sequelize-cli db:migrate",
     "seed": "npx sequelize-cli db:seed:all",
+    "dbsetup": "node dist/create-database.js && npm run migrate && npm run seed",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
