--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dayjs": "^1.11.10",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.5",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -37,6 +38,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.12.7",
     "@types/passport": "^1.0.16",
     "@types/passport-jwt": "^4.0.1",
