feat: add script files for seed data and refactor user avatar generation logic

--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
   "name": "capstone-tutor-men-stack",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/app.js",
   "scripts": {
     "build": "test -d dist && rm -r dist && tsc -p ./ || tsc -p ./",
     "start": "npm run build && node dist/app.js",
     "dev": "nodemon src/app.ts",
     "migrate": "npx sequelize-cli db:migrate",
+    "migrate:undo": "npx sequelize-cli db:migrate:undo:all",
     "seed": "npx sequelize-cli db:seed:all",
-    "dbsetup": "node dist/create-database.js && npm run migrate && npm run seed",
+    "seed:avatar": "node dist/scripts/generate-user-avatar.js",
+    "seed:course": "node dist/scripts/create-upcoming-courses.js",
+    "seed:comment": "node dist/scripts/create-course-comments.js",
+    "seed:reset": "npm run migrate:undo && npm run migrate && npm run seed",
+    "dbsetup": "node dist/scripts/create-database.js && npm run migrate && npm run seed",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
