--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "sequelize": "^6.37.3",
     "sequelize-cli": "^6.6.2",
     "sequelize-typescript": "^2.1.6",
+    "swagger-ui-express": "^5.0.0",
     "unsplash-js": "^7.0.19"
   },
   "devDependencies": {
@@ -47,6 +48,7 @@
     "@types/node": "^20.12.7",
     "@types/passport": "^1.0.16",
     "@types/passport-jwt": "^4.0.1",
+    "@types/swagger-ui-express": "^4.1.6",
     "@types/validator": "^13.11.9",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "eslint": "^8.57.0",
