--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.5",
     "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "sequelize": "^6.37.3",
@@ -47,6 +49,8 @@
     "@types/multer": "^1.4.11",
     "@types/node": "^20.12.7",
     "@types/passport": "^1.0.16",
+    "@types/passport-facebook": "^3.0.3",
+    "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-jwt": "^4.0.1",
     "@types/swagger-ui-express": "^4.1.6",
     "@types/validator": "^13.11.9",
